Grunticon-Workflow refactored: added grunt-string-replace to use different SASS-placeholders | Compass-Options splitted to dev and dist

--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -25,5 +25,8 @@
 // Basisformatierungen
 @import "basics";
 
+// Icons
+@import "icons/**/*";
+
 // alle Module/Komponenten
 @import "blocks/**/*";
