Added assemble layout examples

--- a/source/assemble/pages/index.hbs
+++ b/source/assemble/pages/index.hbs
@@ -1,17 +1,8 @@
 ---
-title: Project Kickstart Assemble - Index
+title: Index – Project-Overview
 layout: lyt-default.hbs
+description: This index shows all pages of this project.
 ---
 <div class="b-page">
-	<header class="b-page-header" role="banner">
-		
-	</header>
-	
-	<main class="b-page-main" role="main">
-		
-	</main>
-	
-	<footer class="b-page-footer" role="contentinfo">
-		
-	</footer>
+	<p>Please provide an overview of all pages built in this project.</p>
 </div>
