--- a/source/assemble/layouts/lyt-default.hbs
+++ b/source/assemble/layouts/lyt-default.hbs
@@ -9,9 +9,9 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=IE7" />
 	
-	<title>{{title }}</title>
+	<title>{{ title }}</title>
 	
-	<meta name="description" content="" />
+	<meta name="description" content="{{ description }}" />
 	<meta name="keywords" content="" />
 	
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-	{{> body  }}
+	{{> body }}
 </body>
 
 </html>
