Moved extends from global-extends.scss into subfolder `extends` and made one file for each extend.

--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -11,7 +11,7 @@
 @import "mixins/**/*";
 
 // Extends
-@import "global-extends";
+@import "extends/**/*";
 
 // Variablen
 @import "global-variables";
