Moved variables from global-variables.scss into subfolder `variables` and made one file for each variable-category | fixed indention on extend-files

--- a/source/sass/extends/_a11y.scss
+++ b/source/sass/extends/_a11y.scss
@@ -1,6 +1,7 @@
-// a11y
+// Hide elements in sake of accessibility
+
 %a11y {
-  position: absolute;
-  top: -32768px;
-  left: -32768px;
+	position: absolute;
+	top: -32768px;
+	left: -32768px;
 }
