--- a/source/sass/extends/_ellipsis.scss
+++ b/source/sass/extends/_ellipsis.scss
@@ -1,6 +1,7 @@
-// ellipsis
+// Ellipsis to point out text
+
 %ellipsis {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
