--- a/source/sass/extends/_hide-text.scss
+++ b/source/sass/extends/_hide-text.scss
@@ -1,7 +1,8 @@
-// hide-text
+// Hide text on elements in sake of accessibility
+
 %hide-text {
-  overflow: hidden;
-  font: 0/0 serif;
-  text-shadow: none;
-  color: transparent;
+	overflow: hidden;
+	font: 0/0 serif;
+	text-shadow: none;
+	color: transparent;
 }
