added HTML coding guidelines

--- a/source/assemble/layouts/lyt-default.hbs
+++ b/source/assemble/layouts/lyt-default.hbs
@@ -19,17 +19,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 	<!--[if ! lte IE 7]><!-->
-	<link rel="stylesheet" href="css/styles.css" type="text/css" />
+	<link href="css/styles.css" rel="stylesheet"  />
 	<!--<![endif]-->
 	
 	<!--[if lte IE 7]>
-	<link rel="stylesheet" href="css/universal.css" type="text/css" />
+	<link href="css/universal.css" rel="stylesheet" />
 	<![endif]-->
 	
 	<script src="js/__basic-behaviour.js"></script>
 	<script src="js/__base-modules.js"></script>
 	
-	<link rel="shortcut icon" href="img/favicon.ico" />
+	<link href="img/favicon.ico" rel="shortcut icon" />
 </head>
 
 <body>
